k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thebookofjoel
  namespace: thebookofjoel
spec:
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        name: thebookofjoel-main
    spec:
      containers:
        - name: backend
          image: backend
          ports:
            - containerPort: 8000
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
