k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thebookofjoel-nginx
  namespace: thebookofjoel
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: thebookofjoel
---
apiVersion: v1
kind: Service
metadata:
  name: thebookofjoel-backend
  namespace: thebookofjoel
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    name: thebookofjoel
